--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -100,7 +100,7 @@
 	<string name="textdocument">Document</string>
 	<string name="save">Save</string>
 	<string name="reset">Reset</string>
-	<string name="change_language">change Language</string>
+	<string name="change_language">Change Language</string>
 	
 </resources>
 
